Added stories statistics
